syntax = "proto3";

package auth;
option go_package = "pkg/pb/logic/auth";

service Auth{
    rpc Login(LoginReq) returns (LoginResp) {}
    rpc Register(RegisterReq) returns (RegisterResp) {}
}

message LoginReq {
    string account = 1;
    string password = 2;
}

message LoginResp {
    UserInfo user_info = 1;
    int64 balance = 2;

    string token = 100;
}

enum Gender {
    UNKNOWN = 0;
    FEMALE = 1;
    MALE = 2;
}

message UserInfo {
    uint32 user_id = 1;
    string account = 2;
    string nickname = 3;
    Gender gender = 4;
}

message RegisterReq {
    string account = 1;
    string password = 2;
    string nickname = 3;
    Gender gender = 4;
}

message RegisterResp {
    uint32 user_id = 1;
}
